Add lorem ipsum text to blog posts

--- a/demos/data/1.md
+++ b/demos/data/1.md
@@ -1,14 +1,13 @@
 ---
-title: Post One
+title: Eu justo
 author: John
 slug: one
 ---
 
 #Introduction
 
-It was the best of posts. It was the worst of post. More closely the latter, I would say.
-It was a cloudy Monday morning, but also the stars were shining this Friday's eve.
+Eu justo congue insolens pro. Per ex nonumes philosophia. Soleat perpetua nam te, pri ad porro denique abhorreant. Mel lorem verear ocurreret eu, mei cu oporteat interesset ullamcorper. Ullum aliquam et sit. Impetus minimum democritum pri ex, his no ancillae deserunt, sale nihil diceret no qui. Nec modus clita facilisi an.
 
 ##First Topic
 
-Contradiction can be a confusing subject
+Dico persecuti mea ex, debet simul sapientem per eu. Et magna officiis interpretaris ius, semper tacimates appellantur sit ea. Ut pri quas verterem. At mei virtute recusabo assentior, duo et intellegam disputationi, an per fabellas voluptatum. Cu elitr semper sed, an vim habeo aliquid. Nec rebum honestatis an, stet instructior vis et.
