--- a/demos/data/2.md
+++ b/demos/data/2.md
@@ -1,14 +1,13 @@
 ---
-title: Post Two
+title: Ea ius
 author: John
 slug: two
 ---
 
 #Introduction
 
-It was the best of posts. It was the worst of post. More closely the latter, I would say.
-It was a cloudy Monday morning, but also the stars were shining this Friday's eve.
+Ea ius quidam pertinacia voluptatum, esse paulo malorum mea et, per et officiis mediocrem suscipiantur. Pri et ullum sanctus fierent, vix an sonet maiorum. Vis ei efficiendi assueverit, in laboramus definitiones has. Ne scripta disputando eum, mea ex iusto aliquam delenit. Mollis viderer deserunt ei eum.
 
 ##First Topic
 
-Contradiction can be a confusing subject
+Ne has omnium fabulas tincidunt, an est nobis volutpat. Ad vel quod nibh gloriatur, no eum case integre. Nam docendi vulputate in, sed placerat inciderint et. Ex ius sonet choro, eu everti audiam legendos vel, cu vix consul feugiat.
