--- a/demos/data/3.md
+++ b/demos/data/3.md
@@ -1,14 +1,13 @@
 ---
-title: Post Three
+title: Graece populo eruditi
 author: John
 slug: three
 ---
 
 #Introduction
 
-It was the best of posts. It was the worst of post. More closely the latter, I would say.
-It was a cloudy Monday morning, but also the stars were shining this Friday's eve.
+Graece populo eruditi sed ut. Cum veritus molestiae constituam at, ponderum splendide ex mea. Illum omittam mediocritatem ex sit, et eam quem nulla admodum. Nam eu mazim dictas consulatu. Ea nec quod praesent democritum, no tantas tibique eos. Est cu soluta honestatis scripserit.
 
 ##First Topic
 
-Contradiction can be a confusing subject
+Ex pro vivendum invenire, usu ei percipit conclusionemque. Eam ea nusquam lobortis. Zril scriptorem appellantur duo no. Ad dolorum disputando eos.
