--- a/demos/data/4.md
+++ b/demos/data/4.md
@@ -1,14 +1,13 @@
 ---
-title: Post Four
+title: Labore prompta
 author: John
 slug: four
 ---
 
 #Introduction
 
-It was the best of posts. It was the worst of post. More closely the latter, I would say.
-It was a cloudy Monday morning, but also the stars were shining this Friday's eve.
+Labore prompta erroribus has et. Vis ad volutpat necessitatibus, tantas recteque in mel. Eu iriure vituperata percipitur pri, congue oporteat probatus sea ne, ipsum ullum disputationi in has. Denique dolores commune sea ea, clita appetere pro et, eos iisque regione assueverit id. Ei ullum scripta saperet mea, vel et graecis accusamus, vim explicari definiebas ne.
 
 ##First Topic
 
-Contradiction can be a confusing subject
+Quo et atqui nulla eleifend, id mea laudem labore suscipiantur, ea mei habeo omnes. Te cum atqui aliquip ocurreret. Ad idque bonorum sea. Quodsi facilisi vim an. Ut eruditi corpora pri, iudico consetetur incorrupte vix ea. His ceteros feugait lucilius ex.
